# OOTD-Back

./: .dockerignore  .env  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: auth.py  ootd.py  recommendation.py  weather.py
app/core/: config.py
app/db/: init_db.py  session.py
app/models/: ootd.py  user.py  user_info.py  users.py  weather.py  weather_info.py
app/schemas/: ootd.py  recommendation.py  user.py
app/services/: gemini.py  kakao_auth.py  s3_service.py
tests/: test_db_connection.py  test_presigned_url.py
